--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.0.18",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
     "js-cookie": "^3.0.5",
     "next": "13.4.7",
     "postcss": "8.4.24",
